Players can access their inventory and use consumables.