@@ -1,6 +1,7 @@
 package cpsc224.items.consumables;
 
 import java.util.Arrays;
+import java.util.List;
 
 import cpsc224.effects.EffectsFactory;
 import cpsc224.effects.HealEffect;
@@ -13,7 +14,7 @@ public class ConsumableFactory {
     public static Consumable createSmallHealthPotion() {
         final String name = "Small Health Potion";
         final EffectsFactory effects = () -> {
-            return Arrays.asList(new HealEffect(25));
+            return List.of(new HealEffect(25));
         };
 
         return new Consumable(name, effects);
